--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
-<?php
-http_response_code(404);
-include('404.php'); // provide your own HTML for the error page
-die();
+ErrorDocument 404 /404.php
+RewriteCond %{THE_REQUEST} \.html
+RewriteRule ^(.*)\.html$ /$1 [R=301,L]
