Made PWA work, changed csp

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://phpajaxxml.codeeatspennies.repl.co",
+  "start_url": "https://school-website.codeeatspennies.repl.co/",
   "background_color": "#29283E",
   "display": "standalone",
   "scope": "/",
