--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "OHS Map",
   "name": "Map of OHS",
+  "display": "fullscreen",
   "icons": [
     {
       "src": "/images/512x512.png",
@@ -20,7 +21,6 @@
   ],
   "start_url": "https://school-website.codeeatspennies.repl.co/",
   "background_color": "#29283E",
-  "display": "standalone",
   "scope": "/",
   "theme_color": "#29283E",
   "shortcuts": [
